# up-nextflap

./: .gitignore  CMakeLists.txt
nextflap/: nextflap.cpp
nextflap/heuristics/: evaluator.cpp  hMetricFF.cpp  hMetricFF.h
nextflap/planner/: plan.cpp
